force-app/main/default/objects/Parecer__c/Parecer__c.object-meta.xml
<CustomObject>
    <label>Parecer</label>
    <nameField>
        <displayFormat>PRC-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pareceres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>