force-app/main/default/objects/Parecer__c/fields/AlcadaAtual__c.field-meta.xml
<CustomField>
    <fullName>AlcadaAtual__c</fullName>
    <label>Alçada atual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>