force-app/main/default/objects/Parecer__c/fields/DataHoraCriacao__c.field-meta.xml
<CustomField>
    <fullName>DataHoraCriacao__c</fullName>
    <label>Data hora criação</label>
    <type>DateTime</type>
</CustomField>