force-app/main/default/objects/Parecer__c/fields/DataHoraFinalizacao__c.field-meta.xml
<CustomField>
    <fullName>DataHoraFinalizacao__c</fullName>
    <label>Data hora finalização</label>
    <type>DateTime</type>
</CustomField>