force-app/main/default/objects/Parecer__c/fields/DescricaoParecer__c.field-meta.xml
<CustomField>
    <fullName>DescricaoParecer__c</fullName>
    <label>Descrição parecer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>