force-app/main/default/objects/Parecer__c/fields/Escalonar__c.field-meta.xml
<CustomField>
    <fullName>Escalonar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalonar</label>
    <type>Checkbox</type>
</CustomField>