force-app/main/default/objects/Parecer__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <description>Proprietário da oportunidade relacionada</description>
    <formula>Oportunidade__r.Owner.FirstName &amp; &apos; &apos; &amp; Oportunidade__r.Owner.LastName</formula>
    <label>Responsável</label>
    <type>Text</type>
</CustomField>