force-app/main/default/objects/Parecer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
            </value>
            <value>
                <fullName>Em análise</fullName>
            </value>
            <value>
                <fullName>Devolvido</fullName>
            </value>
            <value>
                <fullName>Aprovado Comitê</fullName>
            </value>
            <value>
                <fullName>Aprovado Crédito</fullName>
            </value>
            <value>
                <fullName>Aprovado VP</fullName>
            </value>
            <value>
                <fullName>Aprovado com ressalva</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>