force-app/main/default/objects/Parecer__c/fields/ValorOportunidade__c.field-meta.xml
<CustomField>
    <fullName>ValorOportunidade__c</fullName>
    <description>Valor da oportunidade relacionada ao parecer.</description>
    <formula>Oportunidade__r.ValorOportunidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor da Oportunidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>