force-app/main/default/objects/Parecer__c/listViews/Comite_Parecer1.listView-meta.xml
<ListView>
    <fullName>Comite_Parecer1</fullName>
    <filterScope>Queue</filterScope>
    <label>Comitê</label>
    <queue>Comite</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>