force-app/main/default/objects/Parecer__c/listViews/Compliance_Parecer.listView-meta.xml
<ListView>
    <fullName>Compliance_Parecer</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance</label>
    <queue>Compliance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>