force-app/main/default/objects/Parecer__c/listViews/Credito_Parecer.listView-meta.xml
<ListView>
    <fullName>Credito_Parecer</fullName>
    <filterScope>Queue</filterScope>
    <label>Crédito</label>
    <queue>Credito</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>