force-app/main/default/objects/Parecer__c/listViews/Credito_Parecer1.listView-meta.xml
<ListView>
    <fullName>Credito_Parecer1</fullName>
    <filterScope>Queue</filterScope>
    <label>Credito</label>
    <queue>Credito</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>