force-app/main/default/objects/Parecer__c/listViews/Formalizacao_Parecer.listView-meta.xml
<ListView>
    <fullName>Formalizacao_Parecer</fullName>
    <filterScope>Queue</filterScope>
    <label>Formalização</label>
    <queue>Formalizacao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>